Full refactoring of the library
- The parser has been rewritten to be faster.
- XML Configuration files parsers has been rewritten too.
- Display of extensions (like extended-arrows or big brackets) has been improved
- Introduce a parser for mhchem stuff
- Fix several crappy bugs